* 30.12.06      Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix anyfs building with kernel version >=2.6.19
	- Some other building fix

* 16.12.06      Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix anyfs building with kernel version >=2.6.18
	- 0.84.11 Release

* 09.12.06      Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix anysurrect not efficient i/o buffer. So it faster more than in
		2 times.
	- Some Gentoo building fix.
	- 0.84.10 Release
	
* 25.11.06      Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix anyfs building (replacing added 64-bit division to bit operations)
	- 0.84.9a Release

* 19.11.06      Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix broken build_xfs
	- Fix progress bar
	- Add anyfuse module
	- build_it now gets blocksize from statfs (not FIGETBSZ)
	- 0.84.9 Release

* 19.11.06       Kirill A. Korinskiy <catap@catap.ru>
        - Split deb-package in multi package

* 18.11.06	Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix building with xfsprogs >= 2.8.11
	- Add depmod to install target in anyfs/Makefile.in
	- 0.84.8 Release

* 18.11.06       Kirill A. Korinskiy <catap@catap.ru>
        - Add debian/ for debian-like stuff

* 22.10.06	Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Some fix in progress bar of anysurrect to raise performance.
	- Fix building with e2fsprogs-1.39
	- 0.84.7 Release

* 28.08.06	Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- In build_e2fs added support of files with size more than 2 Gb.
	- In anyconvertfs there was fixed searching mount point of device 
		if specified relative path and device mounted.
	- 0.84.6 Release

* 17.08.06	Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Adding libany(3) manual page.
	- 0.84.5c Release

* 14.08.06	Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
	- Fix building build_xfs on x86_64 platform
	- 0.84.5b Release

* 13.08.06	Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>