@@ -508,7 +508,6 @@ any_size_t fd_size()
 }
 
 any_off_t cur_offset = 0;
-int	  cur_wh = 1;
 
 any_off_t _fd_seek(any_off_t offset, int whence)
 {
@@ -518,10 +517,7 @@ any_off_t _fd_seek(any_off_t offset, int whence)
 	if (whence==SEEK_END)
 		offset += fd_size();
 
-	if (offset==cur_offset && !cur_wh)
-		return cur_offset;
-	
-	if ( blocks_before_frag > offset || !cur_frag )
+	if ( ( blocks_before_frag * get_blocksize() ) > offset || !cur_frag )
 	{
 		blocks_before_frag = 0;
 		cur_frag = file_frags_list;
@@ -547,7 +543,6 @@ any_off_t _fd_seek(any_off_t offset, int whence)
 			SEEK_SET);
 
 	cur_offset = offset;
-	cur_wh = 0;
 	
 	return cur_offset;
 }
@@ -565,9 +560,11 @@ any_ssize_t fd_read(void *buf, any_size_t count)
 		if ( p>(io_buffer.start + io_buffer.size - 1) ||
 		  p<io_buffer.start || io_buffer.size==0 )
 		{
-			_fd_seek(p, SEEK_SET);
+			any_size_t bp = p / get_blocksize() * get_blocksize();
+			_fd_seek(bp, SEEK_SET);
 
-			io_buffer.start = p;
+			io_buffer.start = bp;
+
 			io_buffer.size = read (fd, io_buffer.buffer, get_blocksize());
 			if (io_buffer.size<0) 
 				return 0;
@@ -592,7 +589,6 @@ any_ssize_t fd_read(void *buf, any_size_t count)
 	}
 
 	cur_offset = p;
-	cur_wh = 1;
 	return count;
 }
 
