@@ -190,7 +190,6 @@ int read_leshort(uint16_t *value);
 int read_lelong(uint32_t *value);
 
 extern any_off_t	cur_offset;
-extern int		cur_wh;
 
 any_size_t fd_size();
 any_ssize_t fd_read(void *buf, any_size_t count);
@@ -204,7 +203,6 @@ static inline any_off_t fd_seek(any_off_t offset, int whence)
 		offset += fd_size();
 
 	cur_offset = offset;
-	cur_wh = 1;
 
 	return cur_offset;
 }
